# signaux

./: pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-app.yml
data/: default_inputs.json
signaux/: __init__.py  core.py  npencoder.py  signaux.py  test.py  visualise.py
signaux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
